# assistente-matricula

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
app/: streamlit_app.py
data/faiss_index/: index.faiss  index.pkl  index_metadata.json
eval/: results.json  run_ragas.py
ingest/: indexer.py
mcp/mcp_docstore/: server.py
mcp/mcp_eureca/: server.py
scripts/: index_documents.py  test_agent.py  test_graph.py  test_llm.py  test_retrieval.py
src/: graph.py
src/agents/: answerer.py  automation.py  automation_eureca.py  retriever.py  safety.py  self_check.py  supervisor.py
src/assistant/agents/: academic_agent.py  retriever_agent.py  verifier_agent.py  writer_agent.py
src/assistant/graph/: graph.py  state.py
src/assistant/rag/: chunker.py  loader.py  rag_chain.py  retriever.py  vectorstore.py
src/assistant/tools/: eureca_api_tool.py  rag_tool.py
src/integrations/: eureca_client.py
