[tool.poetry]
name = "assistente-matricula"
version = "0.1.0"
description = "Assistente de Matrícula UFCG — sistema agêntico com LangChain, LangGraph, FAISS e MCP"
authors = ["Marcus Ferreira <marcuspsferreira@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }, { include = "mcp" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# LLM e orquestração
langchain = "^0.3"
langchain-core = "^0.3"
langchain-community = "^0.3"
langchain-ollama = "^0.2"
langchain-huggingface = "^0.1"
langchain-text-splitters = "^0.3"
langgraph = "^0.2"

# MCP
mcp = "^1.3"
fastmcp = "^2.0"
langchain-mcp-adapters = "^0.1"

# Vector store
faiss-cpu = "^1.8"        # troque por faiss-gpu se tiver CUDA

# Embeddings
sentence-transformers = "^3.0"
torch = "^2.3"            # necessário para bge-m3 via HuggingFace
transformers = "^4.44"

# Extração de documentos
pypdf = "^5.0"
beautifulsoup4 = "^4.12"
lxml = "^5.2"
requests = "^2.32"

# Interface
streamlit = "^1.37"

# Utilitários
numpy = "^1.26"
python-dotenv = "^1.0"
pydantic = "^2.8"

[tool.poetry.group.eval.dependencies]
# Avaliação — instalado com: poetry install --with eval
ragas = "^0.2"
datasets = "^2.20"
pandas = "^2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.23"
ruff = "^0.6"
mypy = "^1.11"
ipykernel = "^6.29"

[tool.poetry.scripts]
ingest   = "ingest.indexer:run_pipeline"
app      = "app.streamlit_app:main"
evaluate = "eval.run_ragas:run_all"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
